# gestor-videojuegos

./: .gitignore  README.md  main.py  plantilla.html  plantilla_back.html  pyproject.toml  requirements.txt  videogames.db
app/: __init__.py  database.py  main.py
app/models/: __init__.py  developer.py  genre.py  review.py  user.py  user_game.py  videogame.py
app/routers/api/: __init__.py  developers.py  genre.py  genres.py  reviews.py  users.py  videogames.py
app/routers/web/: __init__.py  admin.py  developers.py  genres.py  home.py  reviews.py  user_game.py  users.py  videogame.py  videogames.py
app/schemas/: __init__.py  developer.py  genre.py  review.py  user.py  videogame.py
app/static/: GameLibrary.drawio
app/static/css/: estilos.css
app/templates/: base.html  home.html
app/templates/admin/: dashboard.html
app/templates/developer/: detail.html  list.html
app/templates/genre/: detail.html  detail_back.html  form.html  form_back.html  list.html  list_back.html
app/templates/user/: detail.html  detail_back.html  list.html  list_back.html
app/templates/videogame/: detail.html  detail_js.html  detail_v1.html  form.html  list.html
common/: config.py  ioc.py
common/mapper/: game_mapper_controller.py  game_mapper_repository.py
common/utils/: date_util.py
docs/: info.txt
models/db/: game_db_model.py
models/domain/: developer_model.py  game_model.py  shell_model.py
repository/: game_repository.py
router/api/: api_router.py
router/web/: web_router.py
services/: game_service.py
usecases/: game_insert_use_case.py
(+1 files in other folders)
