[tool.poetry]
name = "gestor-videojuegos"
version = "0.1.0"
description = ""
authors = ["Lueyo <84575656+lueyo@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.121.0"}
sqlalchemy = "^2.0.44"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
